<resources>
    <string name="app_name">NotesApp</string>
    <string name="search_my_notes">Search ...</string>
    <string name="my_notes">My Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note SubTitle</string>
    <string name="type_note_here">Type Note Here ...</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_url">Add URL</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="retry_delete">Retry</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note ?</string>
    <string name="delete_note2">DELETE NOTE</string>
    <string name="Retry_delete_URL">Retry</string>
    <string name="add_url1">Add Url</string>
    <string name="delete_note1">Delete Note</string>
</resources>